--- a/src/main/resources/db_config.properties
+++ b/src/main/resources/db_config.properties
@@ -1,4 +1,4 @@
-db.url=jdbc:mysql://localhost/spr_library?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+db.url=jdbc:mysql://localhost/car_rental?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
 db.login=root
 db.pass=ROOT
 db.driver.name = com.mysql.cj.jdbc.Driver
